tests/invalid/purity/impure_pred_t2.err_exp
impure_pred_t2.m:019: In clause for predicate `main'/2:
impure_pred_t2.m:019:   in argument 1 (i.e. the predicate term) of higher-order
impure_pred_t2.m:019:   predicate call:
impure_pred_t2.m:019:   type error: variable `Y' has type `(impure pred(int,
impure_pred_t2.m:019:   int))',
impure_pred_t2.m:019:   expected type was `pred(V_2, V_1)'.
impure_pred_t2.m:019:   The partial type assignment was:
impure_pred_t2.m:019:     Y_3: (impure pred(int, int))
impure_pred_t2.m:019:     DCG_0_5: (io.state)
impure_pred_t2.m:019:     DCG_3_8: (io.state)
impure_pred_t2.m:019:     V_9: int
